--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="ie=edge">
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Modak&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Modak&display=swap" rel="stylesheet">
 </head>
 <body> 
 
-<header style="text-align: center;"><h2 style="margin-left: 500%; margin-top: 30%; color: white;">PIANO</h2>
+<header style="text-align: center;"><h2 style="margin-left: 500%; margin-top: 40%; color: white; font-size: 40px; font-family: 'Bangers', cursive;">PIANO</h2>
 
 </header>
 
